deployment/respondr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: respondr-service
  namespace: respondr
  labels:
    app: respondr
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - port: 80
    targetPort: 4180
    protocol: TCP
  selector:
    app: respondr
