deployment/respondr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: respondr-ingress
  namespace: respondr
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/use-private-ip: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
    appgw.ingress.kubernetes.io/backend-protocol: "http"
spec:
  tls:
  - hosts:
    - respondr.paincave.pro
    secretName: respondr-tls-letsencrypt
  rules:
  - host: respondr.paincave.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: respondr-service
            port:
              number: 80
